--- a/automatization-project-admin-ui/package.json
+++ b/automatization-project-admin-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^9.0.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^3.3.7",
     "dck-react-components": "^1.0.5",
@@ -18,7 +19,7 @@
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
-    "react-router": "^3.0.5",
+    "react-router": "^4.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.17",
     "react-spinkit": "^3.0.0",
