--- a/automatization-project-admin-ui/package.json
+++ b/automatization-project-admin-ui/package.json
@@ -19,8 +19,8 @@
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-redux": "^4.0.8",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "react-spinkit": "^3.0.0",
     "redux": "^3.7.2",
