--- a/microcontroller.automatomization.project/src/main/resources/application.properties.template
+++ b/microcontroller.automatomization.project/src/main/resources/application.properties.template
@@ -10,6 +10,9 @@ server.contextPath=/api
 spring.jpa.show-sql=true
 
 #Auth config
+auth0.issuer:{YOU_AUTH0_URL}
+auth0.apiAudience:{YOUR_API_IDENTIFIER}
+
 auth.access.token.expire.period=3600
 auth.refresh.token.expire.period=3600
 auth.client.id=client_id
