--- a/automatization-project-admin-ui/package.json
+++ b/automatization-project-admin-ui/package.json
@@ -10,12 +10,14 @@
     "dck-redux": "^1.0.5",
     "dck-validators": "^1.0.5",
     "font-awesome": "^4.7.0",
+    "history": "^4.7.2",
     "immutable": "^3.8.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.19.3",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.5.10",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
