--- a/automatization-project-admin-ui/package.json
+++ b/automatization-project-admin-ui/package.json
@@ -43,6 +43,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
+    "eslint-config-google": "^0.9.1",
     "jest": "^21.2.1",
     "mocha": "^4.0.1"
   }
