--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,8 @@
     "chai": "^4.1.2",
     "eslint-config-google": "^0.9.1",
     "jest": "^21.2.1",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.3"
   }
 }
